--- a/rails101/Gemfile
+++ b/rails101/Gemfile
@@ -32,6 +32,8 @@ gem 'mongoid', '~> 4.0.0'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+# gem 'redis-session-store'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
